pridanie nastavania dátumu vzniku a zániku Task-u (riešenie datepicker-a + výmena Date medzi angularom a backendom) - nedoriešené (hlavne otázka GUI) + rôzne menšie úpravy

--- a/ui/src/app/app/components/footer/footer.component.html
+++ b/ui/src/app/app/components/footer/footer.component.html
@@ -5,7 +5,10 @@
   <div class="left github-link">
     <a href="https://github.com/habalam/work-notes">GitHub project</a>
   </div>
+  <a href="https://azure.microsoft.com/en-us/" style="float: right;">
+    <img src="assets/img/azure_icon.png" alt="Microsoft Azure">
+  </a>
   <div class="powered-by">
-    Powered by <a href="https://azure.microsoft.com/en-us/">Microsoft Azure</a>.
+    Powered by
   </div>
 </div>
