--- a/ui/src/app/app/components/header/header.component.html
+++ b/ui/src/app/app/components/header/header.component.html
@@ -14,5 +14,8 @@
     <div class="menu-item">
       Licence
     </div>
+    <div class="menu-item">
+      Work-notes
+    </div>
   </div>
 </div>
