--- a/ui/src/app/app/components/tasks-list/tasks-list.component.html
+++ b/ui/src/app/app/components/tasks-list/tasks-list.component.html
@@ -6,9 +6,9 @@
   </div>
   <div class="tasks-table">
     <div class="task-list-header">
-      <div class="tasks-column-header textColumn">Text</div>
-      <div class="tasks-column-header">Priority</div>
-      <div class="tasks-column-header">State</div>
+      <div class="tasks-column-header task-text-cell">Text</div>
+      <div class="tasks-column-header task-priority-cell">Priority</div>
+      <div class="tasks-column-header task-status-cell">State</div>
     </div>
     <wn-task *ngFor="let task of tasks" [task]="task"></wn-task>
   </div>
