--- a/ui/src/app/app/components/task/task.component.css
+++ b/ui/src/app/app/components/task/task.component.css
@@ -1,18 +1,6 @@
 .task-cell {
-  padding: 5px 0 5px 0;
+  padding: 5px 0 5px 10px;
   float: left;
-}
-
-.text-cell {
-  flex: 1 1 auto;
-}
-
-.priority-cell {
-  width: 100px;
-}
-
-.status-cell {
-  width: 100px;
 }
 
 .task-data {
@@ -53,10 +41,6 @@
 .task-change {
   padding: 5px 0 0 0;
   border-top: 1px solid cadetblue;
-}
-
-.cell-content {
-  padding: 0 0 0 10px;
 }
 
 .task-change .task-change-text {
