--- a/ui/src/app/app/components/tasks-list/tasks-list.component.css
+++ b/ui/src/app/app/components/tasks-list/tasks-list.component.css
@@ -19,7 +19,6 @@
 
 .tasks-column-header {
   float: left;
-  width: 90px;
   background-image: linear-gradient(to right, rgba(100,149,237,0.8), rgba(100,149,237,0.3));
   padding: 5px 0 5px 10px;
   font-size: 16px;
@@ -48,3 +47,9 @@
   width: 100%;
   display: flex;
 }
+
+.priorityColumn {
+  width: 100px;
+}
+
+
