--- a/ui/src/styles/styles.scss
+++ b/ui/src/styles/styles.scss
@@ -69,3 +69,12 @@ button {
 .task-text-cell {
   flex: 1 1 auto;
 }
+
+.parameter-wrapper {
+  margin: 0 50px 0 0;
+  float: left;
+}
+
+.right {
+  float: right;
+}
