--- a/ui/src/app/app/components/task-view/task-view.component.html
+++ b/ui/src/app/app/components/task-view/task-view.component.html
@@ -2,7 +2,7 @@
 <!--TODO toto by sa dalo určite vyriešiť lepšie - nie napĺňať tasksCount... možno s použitím "async"?-->
 <div *ngIf="tasksCount > 0" class="task-list-wrapper">
   <div class="task-list-tabs">
-    <div class="tasks-tab-element">
+    <div (click)="changeSelectedTab(taskTabViews.SIMPLE_LIST_VIEW)" class="tasks-tab-element">
       Tasks list
     </div>
     <div (click)="changeSelectedTab(taskTabViews.TASKS_BY_DAY_VIEW)" class="tasks-tab-element">
@@ -11,8 +11,6 @@
   </div>
   <div class="tasks-table">
     <wn-tasks-list *ngIf="tabSelected == taskTabViews.SIMPLE_LIST_VIEW" [tasks]="tasks"></wn-tasks-list>
-    <!--TODO pridať komponent pre zobrazovanie taskov po jednotlivých dňoch s tým, že každý deň zobrazí
-     iba tasky aktívne v daný deň, alebo v daný deň zavreté-->
-    <wn-tasks-list *ngIf="tabSelected == taskTabViews.TASKS_BY_DAY_VIEW" [tasks]="tasks"></wn-tasks-list>
+    <wn-tasks-by-day *ngIf="tabSelected == taskTabViews.TASKS_BY_DAY_VIEW" [tasks]="tasks"></wn-tasks-by-day>
   </div>
 </div>
