--- a/ui/src/styles/styles.scss
+++ b/ui/src/styles/styles.scss
@@ -78,3 +78,25 @@ button {
 .right {
   float: right;
 }
+
+.tasks-column-header {
+  float: left;
+  background-image: linear-gradient(to right, rgba(100,149,237,0.8), rgba(100,149,237,0.3));
+  padding: 5px 0 5px 10px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.tasks-column-header.textColumn {
+  flex: 1 1 auto;
+}
+
+.task-list-header {
+  float: left;
+  width: 100%;
+  display: flex;
+}
+
+.priorityColumn {
+  width: 100px;
+}
