čiastočná implementácia JWT na frontend-e (JWT token interceptor, AuthGuard, login component, ...) + pridaný backend AuthController

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div id="whole-page">
   <div id="page-content">
     <wn-header></wn-header>
-    <wn-body></wn-body>
+    <router-outlet></router-outlet>
+    <!--<wn-body></wn-body>-->
     <wn-footer></wn-footer>
   </div>
 </div>
