Zapracovávanie registrácie/úpravy používateľských dát/alertou na GUI, úprava/optimalizácia autentifikácie + veľa príbudných úprav

--- a/ui/src/app/app/components/header/header.component.css
+++ b/ui/src/app/app/components/header/header.component.css
@@ -37,3 +37,11 @@
 .header-title-background {
   background-color: cornflowerblue;
 }
+
+.menu-active-element {
+  cursor: pointer;
+}
+
+.menu-active-element:hover {
+  color: gold;
+}
