pridanie angular error interceptora (aktuálne pre status code 401), menšie grafické úpravy, úprava kódu, aby po vypršaní tokenu backend vrátil 401 (a nie 500) s ktorým si následne poradí error interceptor + nástrel user administrácie

--- a/ui/src/app/app/components/alert/alert.component.html
+++ b/ui/src/app/app/components/alert/alert.component.html
@@ -1,3 +1,6 @@
-<div *ngIf="message">
-  {{message}}
+<div style="float: left; width: 100%; text-align: center;">
+  <div style="width: 80%; display: inline-block; border-top: none; border-radius: 0 0 10px 10px; padding: 5px 0 5px 0;"
+    *ngIf="alertMessage" [ngClass]="{'alertInfo': isInfoAlert(), 'alertWarning': isWarningAlert(), 'alertError': isErrorAlert()}">
+    {{alertMessage.getText()}}
+  </div>
 </div>
