--- a/ui/src/app/app/components/register/register.component.html
+++ b/ui/src/app/app/components/register/register.component.html
@@ -1,11 +1,11 @@
 <wn-alert></wn-alert>
-<div style="width: 100%; float: left">
+<div style="width: 100%; float: left; margin: 10px 0 0 0;">
   <div style="float:left; width: 100%; padding: 0 0 10px 0; text-align: center;">
     <div style="display: inline-block;">
       <div class="div2" style="float: left;">
         Email address:
       </div>
-      <input [(ngModel)]="email" style="float: left;"/>
+      <input [(ngModel)]="userData.emailAddress" style="float: left;"/>
     </div>
   </div>
   <div style="float:left; width: 100%; padding: 0 0 10px 0; text-align: center;">
@@ -13,7 +13,7 @@
       <div class="div2" style="float: left;">
         Login name:
       </div>
-      <input [(ngModel)]="login" style="float: left;"/>
+      <input [(ngModel)]="userData.userName" style="float: left;"/>
     </div>
   </div>
   <div style="float: left; width: 100%; padding: 0 0 10px 0; text-align: center">
@@ -21,7 +21,7 @@
       <div class="div2" style="float: left;">
         Password:
       </div>
-      <input [(ngModel)]="password" type="password" style="float: left;"/>
+      <input [(ngModel)]="userData.password" type="password" style="float: left;"/>
     </div>
   </div>
   <div style="float: left; width: 100%; padding: 0 0 10px 0; text-align: center">
@@ -32,5 +32,9 @@
       <input [(ngModel)]="passwordCheck" type="password" style="float: left;"/>
     </div>
   </div>
-  <button (click)="registerUser()">Register</button>
+  <div style="float: left; width: 100%; padding: 0 0 10px 0; text-align: center">
+    <div style="display: inline-block;">
+      <button (click)="registerUser()">Register</button>
+    </div>
+  </div>
 </div>
