--- a/ui/src/app/app/components/login/login.component.html
+++ b/ui/src/app/app/components/login/login.component.html
@@ -1,4 +1,5 @@
-<div style="width: 100%; float: left">
+<wn-alert></wn-alert>
+<div style="width: 100%; float: left; margin: 10px 0 0 0;">
   <div style="float:left; width: 100%; padding: 0 0 10px 0; text-align: center;">
     <div style="display: inline-block;">
       <div class="div2" style="float: left;">
@@ -15,5 +16,9 @@
       <input [(ngModel)]="password" type="password" style="float: left;"/>
     </div>
   </div>
-  <button (click)="loginUser()">Login</button>
+  <div style="float: left; width: 100%; padding: 0 0 10px 0; text-align: center">
+    <div style="display: inline-block;">
+      <button (click)="loginUser()">Login</button>
+    </div>
+  </div>
 </div>
