--- a/ui/src/app/app/components/task-view/task-view.component.css
+++ b/ui/src/app/app/components/task-view/task-view.component.css
@@ -10,7 +10,8 @@
   text-align: center;
   margin: 0 -5px -2px 0;
   float: left;
-  padding: 6px 10px 6px 10px;
+  padding: 6px 10px 2px 10px;
+  font-size: 17px;
 }
 
 .task-list-wrapper {
