hromada úprav (vezmes mesiace starých, takže sa musím spoľahnúť na to, že to bude v poriadku)

--- a/ui/src/app/app/components/footer/footer.component.html
+++ b/ui/src/app/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
   <div class="left github-link">
     <a href="https://github.com/habalam/work-notes">GitHub project</a>
   </div>
-  <a href="https://azure.microsoft.com/en-us/" style="float: right;">
+  <a href="https://azure.microsoft.com/en-us/" style="float: right; padding-right: 5px;">
     <img src="assets/img/azure_icon.png" alt="Microsoft Azure">
   </a>
   <div class="powered-by">
