--- a/ui/src/app/app/components/task/task.component.html
+++ b/ui/src/app/app/components/task/task.component.html
@@ -42,19 +42,17 @@
           <div class="div1 left">
             Created:
           </div>
-          <input [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1" placeholder="Undefined..."
+          <input ngbDatepicker (click)="d.toggle()" #d="ngbDatepicker" placeholder="Undefined..."
             [(ngModel)]="currentTask.created" name="createdDatePicker">
-          <owl-date-time #dt1></owl-date-time>
         </div>
         <div class="parameter-wrapper">
           <div class="div1 left">
             Closed:
           </div>
-          <input [owlDateTime]="dt2" [owlDateTimeTrigger]="dt2" placeholder="Undefined..."
+          <input ngbDatepicker (click)="d.toggle()" #d="ngbDatepicker" placeholder="Undefined..."
             [(ngModel)]="currentTask.closed" name="closedDatePicker">
-          <owl-date-time #dt2></owl-date-time>
         </div>
-        <div class="full left">
+        <div *ngIf="authService.hasRole('ADMIN')" class="full left">
           <button (click)="deleteTask()">Delete task</button>
         </div>
       </div>
